# humanic_robot_reverse

./: .gitmodules  README.md  frames.gv
devel/: .catkin
devel/include/brx_ik_solver/: IkControlInput.h
devel/lib/brx_ik_solver/: ik_gui_publisher_node  ik_solver_node
devel/lib/joint_state_merger/: joint_state_merger_node
devel/lib/pkgconfig/: BRX042501.pc  brx_ik_solver.pc  joint_state_merger.pc  reverse_bringup.pc  trac_ik_examples.pc  trac_ik_kinematics_plugin.pc  trac_ik_lib.pc  trac_ik_python.pc
devel/lib/python3/dist-packages/brx_ik_solver/msg/: _IkControlInput.py  __init__.py
devel/lib/python3/dist-packages/trac_ik_python/: __init__.py
devel/lib/trac_ik_examples/: ik_tests
devel/share/BRX042501/cmake/: BRX042501Config.cmake
devel/share/brx_ik_solver/cmake/: brx_ik_solver-msg-extras.cmake  brx_ik_solver-msg-paths.cmake  brx_ik_solverConfig.cmake
devel/share/common-lisp/ros/brx_ik_solver/msg/: IkControlInput.lisp  _package.lisp  _package_IkControlInput.lisp  brx_ik_solver-msg.asd
devel/share/gennodejs/ros/brx_ik_solver/msg/: IkControlInput.js  _index.js
devel/share/joint_state_merger/cmake/: joint_state_mergerConfig.cmake
devel/share/reverse_bringup/cmake/: reverse_bringupConfig.cmake
devel/share/roseus/ros/brx_ik_solver/: manifest.l
devel/share/roseus/ros/brx_ik_solver/msg/: IkControlInput.l
devel/share/trac_ik_examples/cmake/: trac_ik_examplesConfig.cmake
devel/share/trac_ik_kinematics_plugin/cmake/: trac_ik_kinematics_pluginConfig.cmake
devel/share/trac_ik_lib/cmake/: trac_ik_libConfig.cmake
devel/share/trac_ik_python/cmake/: trac_ik_pythonConfig.cmake
mydockerfile/: Dockerfile.dev
src/BRX042501/: CMakeLists.txt  package.xml  urdf.rviz  urdf.yaml
src/BRX042501/config/: joint_names_BRX042501.yaml
src/BRX042501/launch/: display.launch  gazebo.launch
src/BRX042501/meshes/: ArmL01_Link.STL  ArmL02_Link.STL  ArmL03_Link.STL  ArmL04_Link.STL  ArmL05_Link.STL  ArmL06_Link.STL  ArmL07_Link.STL  ArmL08_Link.STL  ArmR01_Link.STL  ArmR02_Link.STL  ArmR03_Link.STL  ArmR04_Link.STL  ArmR05_Link.STL  ArmR06_Link.STL  ArmR07_Link.STL  ArmR08_Link.STL  BLWheel01_Link.STL  BLWheel02_Link.STL  BRWheel01_Link.STL  BRWheel02_Link.STL  EyeL_Link.STL  FLWheel01_Link.STL  FLWheel02_Link.STL  FRWheel01_Link.STL  FRWheel02_Link.STL  HandCam01_Link.STL  HandCam02_Link.STL  Head01_Link.STL  Head02_Link.STL  Head03_Link.STL  JawBlock01_Link.STL  JawBlock02_Link.STL  JawBlock03_Link.STL  JawBlock04_Link.STL  LinearclampinggripperJZ01_Link.STL  LinearclampinggripperJZ02_Link.STL  Trunk_Link.STL  WheelL_Link.STL  WheelR_Link.STL
src/BRX042501/urdf/: BRX042501.csv  BRX042501.urdf  BRX042501_fixed_wheel.urdf  BRX042501_fixed_wheel_change_axis.urdf
src/brx_ik_solver/: CMakeLists.txt  package.xml
src/brx_ik_solver/include/brx_ik_solver/: ik_gui_publisher_node.h
src/brx_ik_solver/msg/: IkControlInput.msg
src/brx_ik_solver/src/: ik_gui_publisher_node.cpp  ik_solver_node.cpp
src/brx_ik_solver/ui/: ik_gui.ui
src/joint_state_merger/: CMakeLists.txt
src/joint_state_merger/launch/: joint_state_merger.launch
src/joint_state_merger/src/: joint_state_merger_node.cpp
src/reverse_bringup/: CMakeLists.txt
src/reverse_bringup/launch/: all_nodes.launch
